--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@ recommendations.
   <h2>My Resume</h2>
   <div class="internship-card" id="resume">
     <p>You can view or download my resume below:</p>
-    <a href="Shivam sen resume.pdf" download class="btn">Download Resume</a>
-    <a href="Shivam sen resume.pdf" target="_blank" class="btn">View Online</a>
+    <a href="Shivam_sen resume.pdf" download class="btn">Download Resume</a>
+    <a href="Shivam_sen resume.pdf" target="_blank" class="btn">View Online</a>
   </div>
 </section>
 
