--- a/index.html
+++ b/index.html
@@ -193,8 +193,7 @@ recommendations.
     <div class="contact-card">
       <span class="icon">🔹</span>
       <p><b>LinkedIn</b></p>
-      <a href="https://www.linkedin.com/in/shivam-sen4b406828a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_me
-dium=android_app" target="_blank">
+      <a href="https://www.linkedin.com/in/shivam-sen4b406828a " target="_blank">
         linkedin.com/in/Shivam sen
       </a>
     </div>
