--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ recommendations.
     <div class="contact-card">
       <span class="icon">🔹</span>
       <p><b>Email</b></p>
-      <a href="mailto:krishnarajoo06395@gmail.com">Shivu1754e@gmail.com</a>
+      <a href="mailto:shivu1754e@gmail.com">Shivu1754e@gmail.com</a>
     </div>
     <div class="contact-card">
       <span class="icon">🔹</span>
