--- a/index.html
+++ b/index.html
@@ -193,9 +193,10 @@ recommendations.
     </div>
     <div class="contact-card">
       <span class="icon">🔹</span>
-      <p><b>LinkedIn</b></p>
- 
-      <a href="https://www.linkedin.com/in/shivam-sen-4b406828a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"></a>
+      <p><b>linkedin</b></p>
+      <a href="https://www.linkedin.com/in/shivam-sen-4b406828a?" target="_blank">
+        github.com/Shivam sen
+      </a>
     </div>
     <div class="contact-card">
       <span class="icon">🔹</span>
