--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <link rel="stylesheet" href="index.css">
-  <link rel="shortcut icon" href="Shivamthakur7500.github.io\profile_pic-modified.png" type="image/png">
+  <link rel="icon" href="Shivamthakur7500.github.io\profile_pic-modified.png" type="image/png">
 </head>
 <body>
   <!-- Navbar -->
@@ -195,7 +195,7 @@ recommendations.
       <span class="icon">🔹</span>
       <p><b>linkedin</b></p>
       <a href="https://www.linkedin.com/in/shivam-sen-4b406828a?" target="_blank">
-        github.com/Shivam sen
+        linkedin.com/Shivam sen
       </a>
     </div>
     <div class="contact-card">
