--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <link rel="stylesheet" href="index.css">
-  <link rel="icon" href="Shivamthakur7500.github.io\profile_pic-modified.png" type="image/png">
+  <link rel="icon" href="C:\Users\shivu\OneDrive\Desktop\portfolio\Shivamthakur7500.github.io\profile_pic-modified.png" type="image/png">
 </head>
 <body>
   <!-- Navbar -->
