Update favicon and logo image in index.html

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <link rel="stylesheet" href="index.css">
-  <link rel="icon" href="profile_pic-modified.png" type="image/png">
+  <link rel="icon" href="dp-modified.png" type="image/png">
 </head>
 <body>
   <!-- Navbar -->
   <header>
     <nav>
-      <h1 class="logo"><img src="dp-modified.png" alt="SHIVAM SEN" class="logo-img">Shivam<span>&nbsp;sen</span></h1>
+      <h1 class="logo"><img src="dp.png" alt="SHIVAM SEN" class="logo-img">Shivam<span>&nbsp;sen</span></h1>
 
       <ul>
         <li><a href="#home">Home</a></li>
