--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Navbar -->
   <header>
     <nav>
-      <h1 class="logo"><img src="dp.png" alt="SHIVAM SEN" class="logo-img">Shivam<span>&nbsp;sen</span></h1>
+      <h1 class="logo"><img src="dp.jpg" alt="SHIVAM SEN" class="logo-img">Shivam<span>&nbsp;sen</span></h1>
 
       <ul>
         <li><a href="#home">Home</a></li>
