Fix resume file name in download links

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@ recommendations.
   <h2>My Resume</h2>
   <div class="internship-card" id="resume">
     <p>You can view or download my resume below:</p>
-    <a href="Shivam_sen_resume.pdf" download class="btn">Download Resume</a>
-    <a href="Shivam_sen_resume.pdf" target="_blank" class="btn">View Online</a>
+    <a href="Shivam_sen_Resume.pdf" download class="btn">Download Resume</a>
+    <a href="Shivam_sen_Resume.pdf" target="_blank" class="btn">View Online</a>
   </div>
 </section>
 
