--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <!-- Projects Section -->
   <section id="projects" class="projects">
     <h2>Projects</h2>
-    <a href="https://github.com/Shivamthakur7500/AQI-prediction-project/blob/main/AQI.ipynb"><div class="project-card"> 
+    <a href="https://github.com/Shivamthakur7500/Solution_Challenge_2025-"><div class="project-card"> 
       <h3>Google Solution Challenge </h3>
       <p> Built a responsive web app using HTML, CSS, and JavaScript for the Solution Challenge 2025, featuring user signup, interactive UI, and documented project submission with demo video.
 </p>
